--- a/composer.json.dist
+++ b/composer.json.dist
@@ -10,6 +10,11 @@
 	"require-dev": {
 		"mikey179/vfsStream": "1.1.*"
 	},
+    "autoload": {
+        "psr-4": {
+            "Enlivenapp\\Pubvana\\": "src/"
+        }
+    },
 	"scripts" : {
         "post-update-cmd": [
             "Enlivenapp\\Pubvana\\Installer::postUpdate"
