need this stuff

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ pubvana/widgets/pubvana_featured_post/.DS_store
 
 # no stale dev cache
 pubvana/cache/*
+!pubvana/cache/assets/index.html
+!pubvana/cache/sessions/index.html
 
 # no dev logs
 pubvana/logs/*
@@ -40,6 +42,8 @@ pubvana/logs/*
 
 # no local uploaded dev images
 uploads/*
+!uploads/index.html
+
 
 #composer stuff
 composer.lock
