--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ pubvana/config/database.php
 pubvana/widgets/*
 !pubvana/widgets/pubvana_login/*
 !pubvana/widgets/html/*
+!pubvana/widgets/pubvana_links/*
 !pubvana/widgets/pubvana_archives/*
 !pubvana/widgets/pubvana_categories/*
 !pubvana/widgets/pubvana_recent_posts/*
@@ -18,6 +19,7 @@ pubvana/widgets/*
 !pubvana/widgets/pubvana_featured_post/*
 
 pubvana/widgets/pubvana_login/.DS_store
+pubvana/widgets/pubvana_links/.DS_store
 pubvana/widgets/html/.DS_store
 pubvana/widgets/pubvana_archives/.DS_store
 pubvana/widgets/pubvana_categories/.DS_store
